# code-context

./: .gitattributes  .gitignore  AGENTS.md  AOT_COMPATIBILITY.md  API_ENHANCEMENT_TASKS.md  CLAUDE.md  CLAUDE_API_GUIDE.md  CodeContext.sln  DEVELOPMENT.md  DOTNET10_UPGRADE_TASKS.md  Directory.Build.props  GEMINI.md  KUZU_API_UPDATE_SUMMARY.md  README.md  WORKER_MIGRATION_TASKS.md  codecontext-prd.md  codecontext.openapi.json  kuzu-performance-guide.md  run-mcp.sh  test-api-endpoints.sh  typescript-feature.md  version.json
.claude/: settings.json
.github/workflows/: auto-tag.yml  release.yml
docs/: language-worker-architecture-plan.md  language-worker-sdk.md  phase3-benchmarks.md  post-phase-5-hardening-plan.md
docs/perf/: dotnet10-leftovers-benchmarks.md
roslyn-aot-test/: Program.cs  RoslynAOTTest.csproj
scripts/: install.ps1  install.sh  measure-startup.ps1  measure-worker-gc.ps1  prepare-node-worker-runtime.ps1  verify-publish.ps1
sdk/npm/: README.md  index.d.ts  index.js  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/src/codecontext_worker_sdk/: __init__.py
sdk/python/tests/: test_framing.py
skill/: SKILL.md  install-skill.ps1  install-skill.sh
skill/references/: native-syntax.md  operations.md
src/: inheritance_test.cs  test_interface.cs
src/CodeContext.Api/: CodeContext.Api.csproj  CodeContext.Api.http  CodeContextEndpoints.cs  OpenApiSupport.cs  Program.cs  ProgramHelpers.cs  appsettings.json
src/CodeContext.CSharp.Worker/: CSharpWorkspaceAnalyzer.cs  CodeContext.CSharp.Worker.csproj  Program.cs  worker-manifest.json
(+178 files in other folders)
