[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codecontext-worker-sdk"
version = "1.0.0"
description = "Content-Length framing and protocol constants for CodeContext language workers"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"

[tool.setuptools.packages.find]
where = ["src"]
